# SdrBirdrec

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Changelog.txt  README.md
cmake/: FindNIDAQmx.cmake
cpp/: AudioOutputActivity.h  BiquadFilter.h  CMakeLists.txt  ChannelExtractorNode.h  ControlNode.h  DataFrame.h  DspUtils.h  FIRFilter.h  FileWriterNodeBody.h  InitParams.h  MonitorDataFrame.h  MonitorSettings.h  NIDAQmxSourceActivitiy.h  NodeFunctors.h  ObjectPool.h  SdrBirdrecBackend.cpp  SdrBirdrecBackend.h  SdrBirdrecEnvironment.h  SdrBirdrecMex.cpp  SdrBirdrecMex.mexw64.manifest  SdrBirdrecMex.tbb.manifest  SdrDataFrame.h  SdrSourceActivity.h  SoapyDevice.h  SyncedLogger.h  Topology.cpp  Topology.h  Types.h  UnusedStuff.h  UserInterface.cpp  UserInterface.h  UserParams.h  Version.h.in  class_handle.h  fftwcpp.h  mexUtils.cpp  mexUtils.h  stdafx.h
cpp/mexUtils/: class_interface.m  class_interface_mex.cpp  mexUtils.h
cpp/unusedStuff/: fftwcpp_allocator.h
dependencies/fftw/cmake/: FFTWConfig.cmake
dependencies/fftw/include/: fftw3.h
dependencies/fftw/lib/: fftw3.lib  fftw3f.lib  libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib
dependencies/libsamplerate/cmake/: LibsamplerateConfig.cmake
dependencies/libsamplerate/lib/: libsamplerate-0.exp  libsamplerate-0.ilk  libsamplerate-0.lib
dependencies/libsndfile/cmake/: LibsndfileConfig.cmake
dependencies/portaudio/cmake/: PortAudioConfig.cmake
matlab/: SdrBirdrecBackend.m  SdrBirdrecRecorder.m  analysis.m  getChannels.m  getSdrDevice.m  guistate.mat  install.txt  plotSpectrogram.m  recorder.m  sdr_birdrec.fig  sdr_birdrec.m  sdr_recorder.m  test.m  testSdrBirdrecBackend.m
misc/: SetUHD_IMAGES_DIR.ps1
